# chem-feeder-mqtt

./: CMakeLists.txt  README.md
misc/: ph-dosing-wire-diagram.drawio
models/: 40mm Fan Mount.3mf  DIN Mount Clip - Part 1.3mf  DIN Mount Clip - Part 2.3mf  DIN Rail Dual Relay Cover.3mf  DIN Rail Dual Relay Enclosure.3mf  DIN Rail Dual Relay Mount - 35.5x44.3mf  DIN Rail Dual Relay Mount - 40x32.3mf  DIN Rail Dual Relay Mount Extended.3mf  DIN Rail Fan Controller Enclosure.3mf  DIN Rail Fan Enclosure Cover.3mf  RPI5 Side Camera Mount.3mf  RPI5 Side Mount.3mf  rpi5-arm.stl  rpi5-side-mount.stl
scripts/: chem-feeder-mqtt.service
src/: mqtt-publish.cpp  mqtt-publish.hpp  ph-chem-feeder.cpp  ph-chem-feeder.py  rpicam-stream.py
